--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <section class="featured-project">
                 <h2>Featured Project</h2>
                 <div class="project-card">
-                    <img src="/pics/estimate.png\" alt="Featured Project">
+                    <img src="g" alt="Featured Project">
                     <div class="project-details">
                         <h3>Estimation App</h3>
                         <p>An application that helps user estimate their needed savings for a time period.</p>
