--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@
             </section>
 
             <section class="projects-grid">
-                <div class="project-item" data-category="web">
+                <div class="project-item" data-category="mobile">
                     <img src="./pics/estimate.png" alt="E-commerce Platform">
                     <div class="project-info">
                         <h3>Estimate</h3>
@@ -55,8 +55,8 @@
                     </div>
                 </div>
 
-                <div class="project-item" data-category="mobile">
-                    <img src="./pics/period.png" alt="Fitness App">
+                <div class="project-item" data-category="web">
+                    <img src="./pics/period.png" alt="periodic-table">
                     <div class="project-info">
                         <h3>Periodic Table</h3>
                         <p>A Elemental Table that has various information</p>
@@ -69,7 +69,7 @@
                 </div>
 
                 <div class="project-item" data-category="design">
-                    <img src="/pics/merge.png" alt="Restaurant Website">
+                    <img src="/pics/merge.png" alt="Merge_Sort">
                     <div class="project-info">
                         <h3>Merge Sort Visualizer</h3>
                         <p>UI Design for the Merge Sort algorithm</p>
