--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@
 
             <section class="projects-grid">
                 <div class="project-item" data-category="mobile">
-                    <img src="./pics/estimate.png" alt="E-commerce Platform">
+                    <img src="./pics/estimate.png" alt="estimate">
                     <div class="project-info">
                         <h3>Estimate</h3>
                         <p>An application that helps user estimate their needed savings for a time period</p>
