--- a/periodictable.html
+++ b/periodictable.html
@@ -20,7 +20,7 @@
 
     <nav>
         <div class="container">
-            <div class="nav-logo">AM</div>
+            <div class="nav-logo">MT</div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
