--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <aside>
             <div class="sidebar-section profile">
                 <img src="/pics/dp.png" alt="Profile Picture" class="profile-pic">
-                <h3>Meldion Elijah Torres</h3>
+                <h3>Meldion Torres</h3>
                 <p>University Student</p>
                 <p>Based in Pampanga, Philippines</p>
             </div>
